hardware/ductf: publish writeup and src

--- a/hardware/ductf/ctfcli.yaml
+++ b/hardware/ductf/ctfcli.yaml
@@ -18,4 +18,4 @@ files:
   - ./publish/ductf.uf2
   - ./publish/bbspi.c
 flags:
-  - DUCTF{REDACTED}
+  - DUCTF{D3SF1r3_i5_5ecur3_1f_u53d_corr3ct1y}
